Validate source bounds in ArrowBuf.setBytes(ByteBuffer, srcIndex, length)
The direct-buffer branch computed srcAddress = base + srcIndex and
copied length bytes without ever checking srcIndex + length against
src.capacity(), so an out-of-range source read native memory past the
buffer silently. Every sibling bulk-copy overload (setBytes with
ArrowBuf or byte[] sources, getBytes into an ArrowBuf) validates the
source; the heap branch of this very method is protected implicitly
by duplicate().limit(). This adds the same isOutOfBounds guard the
ArrowBuf-source overload uses.

Also reject a null src with the sibling-style Preconditions message
instead of a bare NullPointerException from src.capacity().